--- a/TransportMgmt/TransportMgmt.Client/TransportMgmtStyles.axaml
+++ b/TransportMgmt/TransportMgmt.Client/TransportMgmtStyles.axaml
@@ -7,8 +7,8 @@
     </Design.PreviewWith>
     
     <Style Selector="Button.ToolButton">
-		<Setter Property="Width" Value="32"/>
-		<Setter Property="Height" Value="32"/>
+		<Setter Property="Width" Value="35"/>
+		<Setter Property="Height" Value="35"/>
 		<Setter Property="Margin" Value="0,4,0,4"/>
     </Style>
 	
@@ -18,5 +18,21 @@
 
 	<Style Selector="Button">
 		<Setter Property="Width" Value="100"/>
+		<Setter Property="CornerRadius" Value="10" />
+	</Style>
+	
+	<Style Selector="TabItem">
+		<Setter Property="FontSize" Value="25" />
+		<Setter Property="FontWeight" Value="Bold" />
+		<Setter Property="Margin" Value="30, 5, 30, 5" />
+	</Style>
+
+	<Style Selector="StackPanel">
+		<Setter Property="Margin" Value="8" />
+	</Style>
+
+	<Style Selector="Label">
+		<Setter Property="FontSize" Value="14" />
+		<Setter Property="FontWeight" Value="Bold" />
 	</Style>
 </Styles>
