--- a/TransportMgmt/TransportMgmt.Client/Views/MainWindow.axaml
+++ b/TransportMgmt/TransportMgmt.Client/Views/MainWindow.axaml
@@ -17,7 +17,7 @@
 	</Window.Styles>
 
 	<TabControl>
-		<TabItem Header="Рассписание рейсов" VerticalAlignment="Center" HorizontalAlignment="Center">
+		<TabItem Header="Расписание рейсов" VerticalAlignment="Center" HorizontalAlignment="Center">
 		<Grid Classes="MainGrid" RowDefinitions="Auto, *">
 			<StackPanel Grid.Row="0" Orientation="Horizontal">
 				<Button Classes="ToolButton" Command="{Binding OnAddTripCommand}">
