--- a/School/School.Client/Views/StudentWindow.axaml
+++ b/School/School.Client/Views/StudentWindow.axaml
@@ -5,7 +5,7 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="School.Client.Views.StudentWindow"
 		xmlns:vm="using:School.Client.ViewModels"
-        Title="Редактирование студента"
+        Title="Редактирование ученика"
 		SizeToContent="Height"
 		MaxWidth="1000">
 	<Design.DataContext>
