--- a/Department/Department.Client/Views/MainWindow.axaml
+++ b/Department/Department.Client/Views/MainWindow.axaml
@@ -14,7 +14,7 @@
 
   <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
     <Grid Classes="MainGrid" RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,
-			  Auto,Auto,Auto,*">
+			  Auto,Auto,Auto, Auto,Auto, *">
       <StackPanel Grid.Row="0" Orientation="Horizontal">
         <Label>Courses</Label>
       </StackPanel>
@@ -109,12 +109,25 @@
           <Image Source="/Assets/task-delete.png"/>
         </Button>
       </StackPanel>
+      
       <DataGrid Grid.Row="11" AutoGenerateColumns="False"
             Items="{Binding Subjects}"
             SelectedItem="{Binding SelectedSubject}">
         <DataGrid.Columns>
           <DataGridTextColumn Header="Name" Binding="{Binding Name}"/>
           <DataGridTextColumn Header="Semester" Binding="{Binding Semester}"/>
+        </DataGrid.Columns>
+      </DataGrid>
+
+      <StackPanel Grid.Row="12" Orientation="Horizontal">
+        <Label>Info about all teachers whose curriculum includes a course project</Label>
+      </StackPanel>
+
+      <DataGrid Grid.Row="13" AutoGenerateColumns="False"
+					  Items="{Binding CourseProjectTeachers}">
+        <DataGrid.Columns>
+          <DataGridTextColumn Header="FullName" Binding="{Binding FullName}"/>
+          <DataGridTextColumn Header="Degree" Binding="{Binding Degree}"/>
         </DataGrid.Columns>
       </DataGrid>
       
