--- a/Department/Department.Client/Views/SubjectWindow.axaml
+++ b/Department/Department.Client/Views/SubjectWindow.axaml
@@ -18,16 +18,16 @@
     <StyleInclude Source="/DepartmentStyles.axaml"/>
   </Window.Styles>
 
-  <Grid Classes="MainGrid" RowDefinitions="Auto,Auto,*" ColumnDefinitions="Auto,*">
+  <Grid Classes="MainGrid" RowDefinitions="Auto,Auto,Auto,*" ColumnDefinitions="Auto,*">
     <Label Grid.Row="0" Grid.Column="0">Name</Label>
     <Label Grid.Row="1" Grid.Column="0">Semester</Label>
 
     <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding Name}"/>
     <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding Semester}"/>
 
-    <StackPanel Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2"
-					HorizontalAlignment="Right"
-					Orientation="Horizontal">
+    <StackPanel Grid.Row="2" Grid.Column="5" Grid.ColumnSpan="2"
+           HorizontalAlignment="Right"
+           Orientation="Horizontal">
       <Button IsDefault="True" Command="{Binding OnSubmitCommand}">OK</Button>
       <Button IsCancel="True" Click="CancelButton_OnClick">Cancel</Button>
     </StackPanel>
