Реализовано отображение, редактирование и удаление продукта на стороне клиента. Добавлены иконки. Изменён ApiWrapper.cs, в связи с изменением swagger.json. В контроллерах изменены функции возврата.

--- a/EnterpriseWarehouse/EnterpriseWarehouseClient/EnterpriseWarehouseStyles.axaml
+++ b/EnterpriseWarehouse/EnterpriseWarehouseClient/EnterpriseWarehouseStyles.axaml
@@ -2,7 +2,6 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Design.PreviewWith>
         <Border Padding="20">
-            <!-- Add Controls for Previewer Here -->
         </Border>
     </Design.PreviewWith>
 
@@ -18,5 +17,10 @@
 
 	<Style Selector="Grid.MainGrid">
 		<Setter Property="Margin" Value="8"/>
+	</Style>
+
+	<Style Selector="Label.LabelAlignment">
+		<Setter Property="VerticalAlignment" Value="Center"/>
+		<Setter Property="HorizontalAlignment" Value="Center"/>
 	</Style>
 </Styles>
