fixed rental point view

--- a/CarApp/CarSharingClient/Views/RentalPointWindow.axaml
+++ b/CarApp/CarSharingClient/Views/RentalPointWindow.axaml
@@ -21,7 +21,7 @@
 		<Label VerticalAlignment="Center" Grid.Row="0" Grid.Column="0">Point Name</Label>
 		<TextBox Grid.Row="0" Grid.Column="1" Text="{Binding Name}"/>
 		<Label VerticalAlignment="Center" Grid.Row="1" Grid.Column="0">Address</Label>
-		<TextBox Grid.Row="1" Grid.Column="1" Text="{Binding Addr}"/>
+		<TextBox Grid.Row="1" Grid.Column="1" Text="{Binding Address}"/>
 
 
 		<StackPanel Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2"
