--- a/CarApp/CarSharingClient/Views/MainWindow.axaml
+++ b/CarApp/CarSharingClient/Views/MainWindow.axaml
@@ -37,7 +37,29 @@
 						
 						<DataGridTextColumn Header="Model" Binding="{Binding Model}"/>
 						<DataGridTextColumn Header="Colour" Binding="{Binding Colour}"/>
-						<DataGridTextColumn Header="Id" Binding="{Binding Id}"/>
+					</DataGrid.Columns>
+				</DataGrid>
+			</Grid>
+		</TabItem>
+		<TabItem Header="Rental Point" VerticalContentAlignment="Center">
+			<Grid Classes="MainGrid" RowDefinitions="Auto,*">
+				<StackPanel Grid.Row="0" Orientation="Horizontal">
+					<Button Classes="ToolButton" Command="{Binding OnAddRentalPointCommand}">
+						<Image Source="/Assets/add.png"/>
+					</Button>
+					<Button Classes="ToolButton" Command="{Binding OnChangeRentalPointCommand}">
+						<Image Source="/Assets/edit.png"/>
+					</Button>
+					<Button Classes="ToolButton" Command="{Binding OnDeleteRentalPointCommand}">
+						<Image Source="/Assets/delete.png"/>
+					</Button>
+				</StackPanel>
+				<DataGrid Grid.Row="1" AutoGenerateColumns="False"
+					Items="{Binding RentalPoints}" SelectedItem="{Binding SelectedRentalPoint}">
+					<DataGrid.Columns>
+
+						<DataGridTextColumn Header="Name" Binding="{Binding Name}"/>
+						<DataGridTextColumn Header="Address" Binding="{Binding Address}"/>
 					</DataGrid.Columns>
 				</DataGrid>
 			</Grid>
@@ -61,7 +83,6 @@
 						<DataGridTextColumn Header="FirstName" Binding="{Binding Firstname}"/>
 						<DataGridTextColumn Header="LastName" Binding="{Binding Lastname}"/>
 						<DataGridTextColumn Header="Birthdate" Binding="{Binding Birthdate}"/>
-						<DataGridTextColumn Header="Id" Binding="{Binding Id}"/>
 					</DataGrid.Columns>
 				</DataGrid>
 			</Grid>
@@ -102,7 +123,6 @@
 				</DataGrid>
 			</Grid>
 		</TabItem>
-		
 	</TabControl>
 </Window>
 
